# mmltk

./: .clang-format  .dockerignore  .gitignore  .uncommentrc.toml  AGENTS.md  CMakeLists.txt  CMakePresets.json  Dockerfile  NOTICE  README.md  actionplan.md  build.sh  buildcef.sh  gui.json  imgui.ini  mmltk
cmake/: mmltk_browser_app.cmake  mmltk_cef_distribution.cmake  mmltk_firefox.cmake  mmltk_gui.cmake  mmltk_helpers.cmake  mmltk_native_dependencies.cmake  mmltk_pch.cmake  mmltk_project_configuration.cmake  mmltk_rfdetr_native.cmake  mmltk_tests.cmake
docker/: Dockerfile.core  Dockerfile.runtime  Dockerfile.runtime-base
include/: common_utils.h  compile_progress_monitor.h  compiled_format.h  cpu_affinity.h  cuda_stream_manager.h  dataset_compiler.h  dataset_loader.h  execution_policy.h  profile_utils.h  worker_pool.h
src/: cli.cpp  cli_bootstrap.h  cli_bundled_tests.cpp  cli_bundled_tests.h  compiled_file_utils.h  cpu_affinity.cpp  cuda_priority.h  cuda_stream_manager.cpp  debug_utils.h  execution_policy.cpp  filesystem_utils.h  image_resize.cpp  image_resize.h  manual_overlay_compare_utils.h  mmltk_logging.cpp  mmltk_logging.h  overlay_compare_utils.h  path_cleanup.cpp  profile_utils.cpp  runtime_paths.h  string_utils.h  worker_pool.cpp
src/browser/app/: Cargo.toml  Trunk.toml  angular.json  index.html  package-lock.json  package.json  playwright.config.ts  rollup.config.mjs  tsconfig.app.json  tsconfig.json  tsconfig.tests.json
src/browser/app/.cargo/: config.toml
src/browser/app/scripts/: generate-contract.cjs  prepare-test-assets.cjs
src/browser/app/src/: app.rs  app.scss  app_shared.ts  browser_shell_state.ts  host_api.generated.ts  host_api.ts  main.rs  main.ts  message.rs  model.rs  runtime_frame_contract.ts  transport.rs  transport.ts  workflow_contract.generated.ts  workflow_utils.ts  workspace_renderer.ts  workspace_surface.rs
src/browser/app/src/app/: annotate-utility-tabs.component.ts  app.config.ts  app.routes.ts  app.ts  browser-shell.store.ts  file-dialog-status.component.ts  host-annotation-intent.ts  left-panel.component.ts  live-preview-controls.component.ts  model-config-section.component.ts  predict-runtime-fields.component.ts  predict-workflow-controls.component.ts  right-panel.component.ts  settings-modal.component.ts  topbar.component.ts  workflow-actions-section.component.ts  workflow-controls-layout.component.ts  workflow-field-list.component.ts  workflow-index-redirect.component.ts  workflow-main.component.ts  workflow-nav.component.ts  workflow-shell.component.ts  workflow-sidebar.component.ts  workspace-host.component.ts
src/browser/app/src/app/left-panel/: annotate-workflow-controls.component.ts  annotation-summary-section.component.ts  export-workflow-controls.component.ts  intent-surface-section.component.ts  source-section.component.ts  train-workflow-controls.component.ts  validate-workflow-controls.component.ts  workflow-controls-section.component.ts
src/browser/app/src/app/right-panel/: right-panel-annotate-sidebar-section.component.ts  right-panel-job-section.component.ts  right-panel-live-status-section.component.ts  right-panel-runtime-diagnostics-section.component.ts  right-panel-shell-settings-section.component.ts  right-panel-train-runtime-section.component.ts  right-panel-workflow-details-section.component.ts  right-panel-workflow-state-section.component.ts  right-panel-workflow-train-details.component.ts  right-panel-workflow-validate-details.component.ts
src/browser/app/src/app/state/: browser-annotate-sidebar.service.ts  browser-annotate-workflow.service.ts  browser-export-workflow.service.ts  browser-host-runtime.service.ts  browser-intent-dispatch.ts  browser-live-workflow.service.ts  browser-model-config.service.ts  browser-predict-workflow.service.ts  browser-shell-chrome.service.ts  browser-shell-settings.service.ts  browser-shell.store.helpers.ts  browser-shell.store.ts  browser-shell.tokens.ts  browser-source-state.service.ts  browser-train-workflow.service.ts  browser-validate-workflow.service.ts  browser-workflow-draft-shared.service.ts  browser-workflow-drafts.service.ts  browser-workflow-panels.service.ts  browser-workflow-primary-action.service.ts  browser-workflow-route.service.ts  browser-workspace.service.ts
src/browser/app/src/app/workspace/: annotation-scene-overlay.ts  workspace-canvas.component.ts  workspace-gpu-bridge.ts  workspace-viewport.ts  workspace-webgpu-renderer.ts
src/browser/app/src/shaders/: workspace_capture.wgsl  workspace_overlay.wgsl
src/browser/app/src/styles/: _base.scss  _components.scss  _forms.scss  _layout.scss  _mixins.scss  _modal.scss  _responsive.scss  _tokens.scss  _workspace.scss
src/browser/app/src/types/: webgpu-queue.d.ts
src/browser/app/src/view/: controls.rs  diagnostics.rs  mod.rs  navigation.rs  settings.rs  workspace.rs
src/browser/app/tests/: annotation_scene_overlay.test.ts  browser-runtime-state.test.ts  browser-shell.store.helpers.test.ts  browser-shell.store.test.ts  browser_shell_state.test.ts  host-contract-boundary.test.ts  mock_transport.ts  transport.test.ts  webgpu_shim.ts  workflow-services.test.ts  workspace_renderer.test.ts
src/browser/app/tests/e2e/: annotate-live-video.spec.ts
src/browser/app/tests/e2e/support/: cef-cdp.ts  mmltk-gui-process.ts
src/browser/app/tests/support/: angular-test-harness.ts  browser-state-assertions.ts  browser-test-fixtures.ts  fake_canvas.ts  host-api-contract-validator.ts  workspace-render-fixtures.ts
tests/: cuda_test_utils.h  profile_runner.cpp  rfdetr_profile_runner.cpp  rfdetr_train_profile_runner.cpp  test_async_runtime.cpp  test_compile_progress.cpp  test_fixture.cpp  test_fixture.h  test_gui_annotation_core.cpp  test_gui_annotation_geometry.cpp  test_gui_app_options.cpp  test_gui_canvas_layers.cpp  test_gui_settings.cpp  test_gui_train_command.cpp  test_gui_vast_runtime.cpp  test_image_resize.cpp  test_model_registry.cpp  test_rfdetr_checkpoint.cpp  test_rfdetr_checkpoint_fixture_support.h  test_rfdetr_checkpoint_parity.cpp  test_rfdetr_cli_aliases.cpp  test_rfdetr_eval_sample_writer.cpp  (+14 more)
(+506 files in other folders)
