[package]
name = "mmltk-browser-app"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
publish = false

[dependencies]
iced = { path = "../../../third_party/iced", default-features = false, features = ["advanced", "fira-sans", "web-colors", "wgpu-bare"] }
iced_aw = { path = "../../../third_party/iced_aw", default-features = false, features = ["card", "color_picker", "context_menu", "number_input", "selection_list"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu = { version = "29", default-features = false, features = ["webgpu"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.6", default-features = false, features = ["websocket"] }
gloo-timers = { version = "0.3", features = ["futures"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Location", "Navigator", "UrlSearchParams", "Window"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
